# cs100

./: README.md
final-project/: .gitignore  CMakeLists.txt  README.md  commandtest.cpp  main.cpp
final-project/Project/: Project.cpp  Project.hpp  Project_test.cpp
final-project/Strategyheaders/: Completed.hpp  Prioritize.hpp  Scheduler.hpp
final-project/Strategysrc/: Completed.cpp  Prioritize.cpp  Scheduler.cpp  Strategy_test.cpp
final-project/Task/: Task.cpp  Task.hpp  Task_test.cpp
final-project/Tasks/: Tasks.cpp  Tasks.hpp
final-project/menu/: menu.cpp  menu.hpp  menu_test.cpp
final-project/menu/mocks/: ConcreteCommand1Mock.hpp  ConcreteCommand2Mock.hpp  TaskCommand.hpp  Tasks.hpp
final-project/prioritizemock/: CompletedMock.cpp  CompletedMock.hpp  PrioritizeMock.hpp  SchedulerMock.cpp  SchedulerMock.hpp
final-project/taskcommandsheader/: addtask.hpp  changetaskdeadline.hpp  changetaskdescription.hpp  changetaskname.hpp  changetaskstatus.hpp  printTasks.hpp  taskcommand.hpp
final-project/taskcommandssrc/: addtask.cpp  changetaskdeadline.cpp  changetaskdescription.cpp  changetaskname.cpp  changetaskstatus.cpp  printTasks.cpp
final-project/taskmock/: ProjectMock.cpp  ProjectMock.hpp  TaskMock.cpp  TaskMock.hpp  TasksMock.cpp  TasksMock.hpp
final-project/valgrindtests/: commandtest.cpp  compositetest.cpp  compositetestcomp.cpp
lab-01---introduction-to-software-construction-tooling-ctruo-master/lab-01---introduction-to-software-construction-tooling-ctruo-master/: .gitignore
lab-01---introduction-to-software-construction-tooling/lab-01---introduction-to-software-construction-tooling-ctruo-master/: test.cpp
lab-02---github-flow-sgupt060_ctruo032-master/: c-count.h  sevenOpMock.hpp
lab-03---composite-pattern/lab-03---composite-pattern-ctruo032_sgupt060-master/: .gitignore  NegOpMock.hpp  ZeroOpMock.hpp  add.hpp  add_test.hpp  div.hpp  div_test.hpp  mult.hpp  mult_test.hpp  op.hpp  op_test.hpp  pow.hpp  pow_test.hpp  rand.hpp  rand_test.hpp  sevenOpMock.hpp  sub.hpp  sub_test.hpp  unit_test.cpp
lab-04---valgrind/: person.cpp  personList.cpp
lab-05---strategy-pattern/: .gitignore  CMakeLists.txt  Select_And_Test.hpp  Select_Contains_test.hpp  Select_Not_test.hpp  Select_Or_test.hpp  main.cpp  program.cpp  select.hpp  spreadsheet.cpp  test.cpp
lab-07---factory-pattern/: .gitignore  CMakeLists.txt  factory.hpp  factory_test.hpp  main.cpp  unit_test.cpp
lab-07---factory-pattern/add/: add.hpp  add_test.hpp
lab-07---factory-pattern/div/: div.hpp  div_test.hpp
lab-07---factory-pattern/mock/: NegOpMock.hpp  ZeroOpMock.hpp  sevenOpMock.hpp
lab-07---factory-pattern/mult/: mult.hpp  mult_test.hpp
lab-07---factory-pattern/op/: op.hpp  op_test.hpp
lab-07---factory-pattern/pow/: pow.hpp  pow_test.hpp
lab-07---factory-pattern/rand/: rand.hpp  rand_test.hpp
lab-08---visitor-pattern/: .gitignore  CMakeLists.txt  base.hpp  factory.hpp  main.cpp  printInLatex.hpp  printLatex_test.hpp  unit_test.cpp  visitor.hpp  visitorLatex.cpp  visitorLatex.hpp
(+19 files in other folders)
